--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Open+Sans:wght@300;400;600&family=Oswald&family=Press+Start+2P&family=Rubik&display=swap');
 
 /* Estilos gerais */
-
-* {}
-
-
-
 body {
     background: #111;
     margin: 0;
@@ -24,7 +19,6 @@ nav {
     color: white;
     height: 100px;
     padding: 0 30px;
-    font-size: 1.4rem;
 }
 
 nav img {
@@ -37,7 +31,7 @@ nav a {
     color: white;
     text-decoration: none;
     margin-left: 20px;
-    font-size: 26px;
+    font-size: 1.5rem;
     transition: color 0.3s ease-in-out;
     border-bottom: 2px solid transparent;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -169,20 +163,20 @@ header .titulo {
     color: white;
 }
 
-.texto-h3 {
+.texto-h2 {
     line-height: 40px;
     font-size: large;
     font-family: 'Press Start 2P', cursive;
     box-sizing: border-box;
 }
 
-.texto-h3 span {
+.texto-h2 span {
     color: aqua;
 }
 
 .second-page .texto-p {
-    font-size: 1.5rem;
-    line-height: 30px;
+    font-size: 1.3rem;
+    line-height: 26px;
     letter-spacing: 0px;
     max-height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -217,8 +211,8 @@ header .titulo {
 }
 
 .third-page .texto-p {
-    font-size: 1.5rem;
-    line-height: 30px;
+    font-size: 1.3rem;
+    line-height: 26px;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -229,5 +223,94 @@ header .titulo {
     margin: 90px;
     margin-right: 80px;
     margin-top: 110px;
+    border-radius: 10%;
+}
+
+/* ================================================================= */
+/* quarta página */
+
+.forth-page {
+    display: flex;
+    justify-content: flex-start;
+    align-items: auto;
+    flex-direction: row;
+    background-color: #111;
+}
+
+.forth-page img {
+    width: 600px;
+    height: 400px;
+    margin: 90px;
+    margin-right: 80px;
+    margin-top: 150px;
+    border-radius: 10%;
+}
+
+.forth-page .texto {
+    width: 50%;
+    font-size: 10px;
+    color: aqua;
+    padding: 80px 80px 20px;
+    text-align: left;
+    margin-right: 300;
+}
+
+.forth-page .titulo {
+    margin-bottom: 15px;
+    font-size: x-large;
+    line-height: 30px;
+    font-family: 'Press Start 2P', cursive;
+    box-sizing: border-box;
+}
+
+.forth-page .texto-p {
+    font-size: 1.3rem;
+    line-height: 26px;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* ================================================================= */
+/* quinta página */
+
+.fifth-page {
+    display: flex;
+    justify-content: flex-start;
+    align-items: auto;
+    flex-direction: row;
+    background-color: #111;
+}
+
+.fifth-page .texto {
+    width: 50%;
+    font-size: 10px;
+    color: aqua;
+    padding: 80px 80px 20px;
+    text-align: left;
+    margin-right: 300;
+
+}
+
+.fifth-page .titulo {
+    font-size: x-large;
+    margin-bottom: 15px;
+    line-height: 30px;
+    font-family: 'Press Start 2P', cursive;
+    box-sizing: border-box;
+}
+
+.fifth-page .texto-p {
+    font-size: 1.3rem;
+    line-height: 26px;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.fifth-page img {
+    width: 600px;
+    height: 400px;
+    margin: 90px;
+    margin-right: 80px;
+    margin-top: 150px;
     border-radius: 10%;
 }
